fixed favicon and some meta-tags

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,8 +11,8 @@
   <meta property="og:title" content="{{ title or 'Бевура' }}">
   <meta property="og:description" content="{{ description or 'Кормовые продукты и реквизиты компании Бевура' }}">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://bevura.by{{ page.url }}">
-  <meta property="og:image" content="https://bevura.by/assets/preview.webp">
+  <meta property="og:url" content="https://bevura.vercel.app{{ page.url }}">
+  <meta property="og:image" content="https://bevura.vercel.app/assets/preview.webp">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
