--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,6 +8,7 @@
   <meta name="keywords" content="{{ keywords or 'шрот, соевый шрот, подсолнечный шрот, корм, Бевура, реквизиты, продукция, Беларусь, Гродно, комбикорм, КРС, корм для КРС' }}">
   <meta name="author" content="ООО Бевура">
 
+  <meta name="yandex-verification" content="6831e9ae06655bda" />
   <meta name="google-site-verification" content="oTm27s6XitPWJpsIsrU3WGhawf8DcPXs7x7eoHSNGQs" />
 
   <meta property="og:title" content="{{ title or 'Бевура' }}">
